# image_transport_plugins

compressed_depth_image_transport/: CMakeLists.txt
compressed_depth_image_transport/cfg/: CompressedDepthPublisher.cfg
compressed_depth_image_transport/include/compressed_depth_image_transport/: codec.h
compressed_depth_image_transport/src/: codec.cpp  compressed_depth_publisher.cpp
compressed_image_transport/: CMakeLists.txt
compressed_image_transport/include/compressed_image_transport/: NvJpegCodec.h  compressed_subscriber.h
compressed_image_transport/src/: NvJpegCodec.cc  compressed_subscriber.cpp
